--- a/api/src/app/app.component.html
+++ b/api/src/app/app.component.html
@@ -1,5 +1,23 @@
 <div class="appComponent">
-  <h1>Hello En vagyok az app component</h1>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Crypto Trader</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a [routerLink]="['/list']">Coins</a></li>
+        <li><a [routerLink]="['/portfolio']">My portfolio</a></li>
+
+        <a class="waves-effect waves-light btn">Log Out</a>
+      </ul>
+    </div>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="mobile.html">Mobile</a></li>
+  </ul>
   <!--
   <h2>{{message}}</h2>
 
