--- a/api/src/app/app.component.html
+++ b/api/src/app/app.component.html
@@ -7,7 +7,7 @@
         <li><a [routerLink]="['/list']">Coins</a></li>
         <li><a [routerLink]="['/portfolio']">My portfolio</a></li>
 
-        <a class="waves-effect waves-light btn">Log Out</a>
+        <a class="waves-effect waves-light btn" *ngIf="isLoggedIn()" (click)="logOut()">Log Out</a>
       </ul>
     </div>
   </nav>
