--- a/api/src/app/app.component.html
+++ b/api/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="appComponent">
-  <nav>
-    <div class="nav-wrapper">
+  <nav *ngIf="isLoggedIn()">
+    <div class="nav-wrapper" >
       <a href="#!" class="brand-logo">Crypto Trader</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -11,14 +11,6 @@
       </ul>
     </div>
   </nav>
-
-
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
-  </ul>
 
   <!--
   <h2>{{message}}</h2>
